# cpgv

./: CP.cf  CPBuilder.hs  CPI.hs  CPToGV.hs  Check.hs  CheckGV.hs  EvalGV.hs  Expand.hs  GV-extensions.txt  GV.cf  GVI.hs  GVToCP.hs  Main.hs  Makefile  Norm.hs  README  RunGV.hs  ScopeGV.hs  church.mucp  closures.gv  cpgv.cabal  examples.gv  natstreams.mucp  peano.cp  peano.gv  quote.cp  rec.gv  streams.mucp  test.cp  test.gv  toninho.cp
CP/: Check.hs  Expand.hs  Lexer.x  Norm.hs  Parser.y  Printer.hs  Syntax.hs  Trace.hs  Utilities.hs
GV/: CPBuilder.hs  Check.hs  Lexer.x  Parser.y  Printer.hs  Run.hs  Scope.hs  Syntax.hs
access/: access.tex
concur2014/: Makefile  cut.tex  infer.sty  main.bib  main.tex
docs/: fastnorm.tex  infer.sty  mucut.tex
docs/access/: sigplanconf.cls
docs/concur2014/: main.bib
docs/esop2015/: main.bib  main.tex  preamble.tex
docs/places2014/: cpgv-nocomment.tex  cpgv.tex
docs/places2015/: main.tex  mathpartir.sty  mathwidth.sty  preamble.tex
linearpi/: linearpi.tex
places2014/: Makefile  cpgv.bib  cpgv.tex
places2014/talk/: hgv.tex
